[package]
name = "req-enc-dec-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "req_enc_dec_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
block-modes = "0.9"
block-padding = "0.3"

