[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "req-enc-dec-rust"
version = "0.1.0"
description = "Request/Response Encryption/Decryption Middleware for Flask written in Rust"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
keywords = ["flask", "middleware", "encryption", "decryption", "security"]
dependencies = [
    "flask>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/req-enc-dec-rust"
Repository = "https://github.com/yourusername/req-enc-dec-rust"
Documentation = "https://github.com/yourusername/req-enc-dec-rust#readme"

[tool.maturin]
features = ["pyo3/extension-module"]